# django-scylla

./: pyproject.toml
django_scylla/: __init__.py  base.py  client.py  cursor.py  fields.py  lookups.py  operations.py
django_scylla/cql/: compiler.py  query.py
